--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
 <head>
     <title>Home</title>
     <link href="style1.css" rel="stylesheet" />
-</head>
-
-<body>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/> 
+</head> 
+    <body>
     <div class="bg">
-    <div class="head">
-        <h1>Keaton Kraiger</h1>
-        <div class="head2">
-           <p>Full Stack Portfolio</p>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-transparent">
+            <a class="navbar-brand" href="https://keatonkraiger.github.io/">Keaton Kraiger</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="about.html">About</a>
+                    <a class="nav-item nav-link" href="#">Portfolio</a>
+                    <a class="nav-item nav-link" href="images/Newest.pdf">CV</a>
+                    <a class="nav-item nav-link" href="Contact">Contact</a>
+                </div>
+            </div>
+        </nav>
+        <div class="head">
+            <h1>Keaton Kraiger</h1>
+            <div class="head2">
+                <p>Full Stack Portfolio</p>
+            </div>
         </div>
     </div>
-    </div>
-</body>
-
+    </body>
 </html>
