--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>About</title>
-    <link href="about.css" rel="stylesheet" />
+    <link href="about.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div class="bg">
     <div class="header">
         <div class="wrapper">
         <nav class="navbar navbar-expand-lg navbar-light bg-dark bg-transparent">
@@ -21,23 +22,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="home2.html">About</a>
-                    <a class="nav-item nav-link" href="#">Portfolio</a>
+                    <a class="nav-item nav-link" href="about.html">About</a>
+                    <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
                     <a class="nav-item nav-link" href="images/Newest.pdf">CV</a>
-                    <a class="nav-item nav-link" href="Contact">Contact</a>
+                    <a class="nav-item nav-link" href="Contact.html">Contact</a>
                 </div>
             </div>
         </nav>
         </div>
         <h1>About me</h1>
-        <img src='/images/headshot.jpg' alt="Headshot of author" class="face-pic" style='width:128px;height:128px'>
+        <img src='images/headshot.jpg' alt="Headshot of author" class="face-pic" style="width:128px;height:128px">
         <div class="info">
             <p>My name is Keaton Kraiger and I am currently a senior at Portland State University majoring in
                 computer
                 science. I am working as a grader and Technical course student
                 specialist for Karla Fant's courses in the CS department.</p>
-            <img src='/images/presenting.jpeg' alt="Me presenting research" style='width:160px;height:120px'
-                align='right'>
             <p>I am also doing research with Dr. Dan Hammerstrom in the Biologically-Inspired Computing Lab, part of
                 Portland State's
                 Center for Brian Inspired Computing division. I am researching biologically inspired computer vision
@@ -48,6 +47,6 @@
             </p>
         </div>
     </div>
+</div>
 </body>
-
 </html>
