--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Contact</title>
     <link href="contact.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -14,6 +16,7 @@
         integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark bg-transparent">
         <a class="navbar-brand" href="https://keatonkraiger.github.io/">Keaton Kraiger</a>
@@ -24,13 +27,33 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Portfolio</a>
+                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link" href="images/Newest.pdf">CV</a>
                 <a class="nav-item nav-link" href="contact.html">Contact</a>
             </div>
         </div>
     </nav>
+    <div class="flex-row contact-container">
+        <div class="flex-col line">
+        <div class="links">
+            <ul type="none">
+                <a href="mailto:kkraiger@pdx.edu" class="fa fa-envelope" style="font-size:36px; color:#613F75"> Email</a>
+                <li><br></li>
+                <a href="https://github.com/keatonkraiger" class="fa fa-github" style="font-size:36px; color:#7D82B8"> Github</a>
+                <li><br></li>
+                <a href="linkedin.com/in/keaton-kraiger" class="fa fa-linkedin" style="font-size:36px; color:#F7A9A8"> Linkedin</a>
+                <li><br></li>
+                <a href="https://twitter.com/keatonin" class="fa fa-twitter" style="font-size:36px;color:#EF798A">Twitter</a>
+                <li></li>
+            </ul>
+        </div>
+        </div>
+        <div class="flex-col">
+        <div class="content">
+            <h4>My goal is to attend graduate school to get my PhD in computer science and ultimately work in an exciting and challenging enviornment.
+                I am best reached on my email :)</h4>
+        </div>
+        </div>
+</body>
 
-    <div class="line"></div>
-</body> 
 </html>
