--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <link href="contact.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+    <!script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -35,8 +36,9 @@
     </nav>
     <div class="flex-row contact-container">
         <div class="flex-col line">
-        <div class="links">
+        <div class="links" id="links">
             <ul type="none">
+                <div id="popup" style='display:none'>Email</div>
                 <a href="mailto:kkraiger@pdx.edu" class="fa fa-envelope" style="font-size:36px; color:#613F75"> Email</a>
                 <li><br></li>
                 <a href="https://github.com/keatonkraiger" class="fa fa-github" style="font-size:36px; color:#7D82B8"> Github</a>
@@ -51,7 +53,7 @@
         <div class="flex-col">
         <div class="content">
             <h4>My goal is to attend graduate school to get my PhD in computer science and ultimately work in an exciting and challenging enviornment.
-                I am best reached on my email :)</h4>
+                I am best reached at my email :)</h4>
         </div>
         </div>
 </body>
