--- a/about.html
+++ b/about.html
@@ -30,7 +30,14 @@
             </div>
         </nav>
         </div>
-        <h1>About me</h1>
+        <div class="text">
+                <p>
+                  <span class="word pink">Student</span>
+                  <span class="word purple">Researcher</span>
+                  <span class="word blue">Developer</span>
+                </p>
+             <script src="file.js" type="text/javascript"></script>
+        </div>
         <img src='images/headshot.jpg' alt="Headshot of author" class="face-pic" style="width:128px;height:128px">
         <div class="info">
             <p>My name is Keaton Kraiger and I am currently a senior at Portland State University majoring in
