--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                     <a class="nav-item nav-link" href="about.html">About</a>
                     <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
                     <a class="nav-item nav-link" href="images/Newest.pdf">CV</a>
-                    <a class="nav-item nav-link" href="Contact.html">Contact</a>
+                    <a class="nav-item nav-link" href="contact.html">Contact</a>
                 </div>
             </div>
         </nav>
