--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                 <li><br></li>
                 <a href="https://github.com/keatonkraiger" class="fa fa-github" style="font-size:36px; color:#7D82B8"> Github</a>
                 <li><br></li>
-                <a href="linkedin.com/in/keaton-kraiger" class="fa fa-linkedin" style="font-size:36px; color:#F7A9A8"> Linkedin</a>
+                <a href="https://www.linkedin.com/in/keaton-kraiger" class="fa fa-linkedin" style="font-size:36px; color:#F7A9A8"> Linkedin</a>
                 <li><br></li>
                 <a href="https://twitter.com/keatonin" class="fa fa-twitter" style="font-size:36px;color:#EF798A">Twitter</a>
                 <li></li>
