--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="CS MS Student">
+  <meta name="description" content="CSE PhD student">
 
   
   <link rel="alternate" hreflang="en-us" href="https://keatonkraiger.github.io/404.html">
@@ -251,7 +251,7 @@
   <meta property="og:site_name" content="Keaton Kraiger">
   <meta property="og:url" content="https://keatonkraiger.github.io/404.html">
   <meta property="og:title" content="404 Page not found | Keaton Kraiger">
-  <meta property="og:description" content="CS MS Student"><meta property="og:image" content="https://keatonkraiger.github.io/images/icon_hu97b623b8843c82bf09b35f130713c62f_19630_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="CSE PhD student"><meta property="og:image" content="https://keatonkraiger.github.io/images/icon_hu97b623b8843c82bf09b35f130713c62f_19630_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="https://keatonkraiger.github.io/images/icon_hu97b623b8843c82bf09b35f130713c62f_19630_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
