--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         </p>
                         <p>Contact: keatonkraiger@gmail.com</p>
                         <div class="social-icons">
-                            <a href="assets/pdfs/cv.pdf" target="_blank" class="mr-2" title="View my CV"><i class="fas fa-file-alt"></i>CV</a>
+                            <a href="files/pdfs/cv.pdf" target="_blank" class="mr-2" title="View my CV"><i class="fas fa-file-alt"></i>CV</a>
                             <a href="https://github.com/keatonkraiger" target="_blank" class="mr-2"><i class="fab fa-github"></i></a>
                             <!--
                             <a href="your-twitter-link" target="_blank" class="mr-2"><i class="fab fa-twitter"></i></a>
