CV filename updated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-0I4tnDyFwGU6re8yLlDaWS58k9v5JTRxOVoI15PpXN7RzXR8SD1eZ5wv0VEV0P2" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css?v=1.02">
+    <link rel="stylesheet" href="style.css?v=1.03">
     <link rel="manifest" href="site.webmanifest">
 </head>
 
@@ -30,7 +30,7 @@
                         </p>
                         <p>Contact: keatonkraiger@gmail.com</p>
                         <div class="social-icons">
-                            <a href="files/pdfs/cv.pdf" target="_blank" class="mr-2" title="View my CV"><i class="fas fa-file-alt"></i>CV</a>
+                            <a href="files/pdfs/KeatonKraiger_CV.pdf" target="_blank" class="mr-2" title="View my CV"><i class="fas fa-file-alt"></i>CV</a>
                             <a href="https://github.com/keatonkraiger" target="_blank" class="mr-2"><i class="fab fa-github"></i></a>
                             <!--
                             <a href="your-twitter-link" target="_blank" class="mr-2"><i class="fab fa-twitter"></i></a>
