--- a/index.html
+++ b/index.html
@@ -61,73 +61,154 @@
                 <h2>News</h2>
                 <div id="news">
                     <ul>
-                        <li><strong>04/24:</strong> Attended the NYC Vision Day with two posters</li>
-                        <li><strong>02/24:</strong> Hosted a booth at the Pittsburgh Robotics Day</li>
-                        <li><strong>10/23:</strong> Dr. Collins of LPAC was awarded NSF grant!</li>
+                        <li><strong>8/25:</strong> Our work Estimating Foot Pressure and Stability from Visual Input was accepted at BMVC 2025!</li>
+                        <li><strong>5/25:</strong> Our submission Learn From Human Eyes wins best Oral Presentation at Symmetry 2025</li>
+                        <li><strong>2/25:</strong> We present Vision to Dynamics at NYC Vision day 2025</li>
                     </ul>
                 </div>
             </div>
         </div>
     
         <!-- Publications Section -->
-        <div class="row mt-5">
-            <div class="col-md-9 col-12">
-                <h2>Research</h2>
-                <div class="publication-container">
-                    <!-- Publications content -->
-                    <div class="row mb-3">
-                        <div class="col-md-2">
-                            <img src="assets/icons/RP.png" alt="Publication Title" class="img-fluid">
-                        </div>
-                        <div class="col-md-10">
-                            <h3 class="publication-title">Novel 3D Scene Understanding Applications From Recurrence in a Single Image</h3>
-                            <p class="authors">Shimian Zhang, Skanda Bharadwaj, <b>Keaton Kraiger</b>,  Yashasvi Asthana, Hong Zhang, Robert T. Collins and Yanxi Liu</p>
-                            <div class="venue">Preprint, 2023</div>
-                            <div class="publication-links">
-                                <a href="https://arxiv.org/abs/2210.07991" target="_blank">Paper</a>
-                                <a href="http://vision.cse.psu.edu/research/regularity_perception/index.shtml" target="_blank">Project Page</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <h2>Publications</h2>
 
-        <!-- Miscellaneous Section -->
-        <div class="row mt-5">
-            <div class="col-md-9 col-12">
-                <h2>Miscellaneous</h2>
-                <div class="publication-container">
-                    <!-- Publications content -->
-                    <div class="row mb-3">
-                        <div class="col-md-2">
-                            <img src="assets/icons/NYC_vision.png" alt="NYC Vision Day" class="img-fluid">
-                        </div>
-                        <div class="col-md-10">
-                            <h3 class="publication-title">Vision to Dynamics</h3>
-                            <p class="authors"><b>Keaton Kraiger</b> and Yuan Gao</p>
-                            <div class="venue"><a href="https://cs.nyu.edu/~fouhey/NYCVision2024/", target="_blank">NYC Vision Day 2024</a> Poster</div>
-                            <div class="publication-links">
-                                <a href="files/pdfs/NYU.pdf" target="_blank">PDF</a>
-                                <a href="http://vision.cse.psu.edu/research/dynamicsFromKinematics/index.shtml" target="_blank">Website</a>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <img src="assets/icons/pitt_robotics.png" alt="Pittsburgh Robotics Discovery Day" class="img-fluid">
-                        </div>
-                        <div class="col-md-10">
-                            <h3 class="publication-title">Humanoid Robots (Real and Simulated)</h3>
-                            <p class="authors">Jeff Koumba, Yuan Gao, and <b>Keaton Kraiger</b></p>
-                            <div class="venue"><a href="https://robopgh.org/discoveryday/", target='_blank'>Pittsburgh Robotics Network Discovery Day 2023 </a> Poster</div>
-                            <div class="publication-links">
-                                <a href="files/pdfs/PITT.pdf" target="_blank">PDF</a>
-                                <a href="https://vision.cse.psu.edu/courses/CMPEN497_Robotics/cmpen497_robotics.shtml" target="_blank">Website</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <publication-card>
+    <div class="pub-image">
+        <img src="assets/icons/FootFormer.png" alt="FootFormer" />
+    </div>
+    <div class="pub-meta">
+        <h3 class="pub-title">
+        Estimating Foot Pressure and Stability from Visual Input
+        </h3>
+        <p class="pub-authors">
+        <b>Keaton Kraiger</b>, Jingjing Li, Skanda Bharadwaj, Yanxi Liu, Robert T. Collins
+        </p>
+        <div class="pub-venue">(To appear) BMVC 2025</div>
+        <div class="pub-links">
+        <a href="https://arxiv.org/abs/2210.07991" target="_blank">Paper</a>
+        <a href="https://sites.psu.edu/eecslpac/vision-to-dynamics/" target="_blank">Project Page</a>
         </div>
+    </div>
+    </publication-card>
+
+    <publication-card>
+    <div class="pub-image">
+        <img src="assets/icons/RP.png" alt="Novel 3D Scene Understanding" />
+    </div>
+    <div class="pub-meta">
+        <h3 class="pub-title">
+        Novel 3D Scene Understanding Applications From Recurrence in a Single Image
+        </h3>
+        <p class="pub-authors">
+        Shimian Zhang, Skanda Bharadwaj, <b>Keaton Kraiger</b>, Yashasvi Asthana, Hong Zhang, Robert T. Collins, Yanxi Liu
+        </p>
+        <div class="pub-venue">Preprint 2023</div>
+        <div class="pub-links">
+        <a href="https://arxiv.org/abs/2210.07991" target="_blank">Paper</a>
+        <a href="https://sites.psu.edu/eecslpac/explicit-and-implicit-regularity-perception/" target="_blank">Project Page</a>
+        </div>
+    </div>
+    </publication-card>
+
+<!-- Projects/Presentations Section -->
+<div class="row mt-5">
+  <div class="col-md-9 col-12">
+    <h2>Projects & Presentations</h2>
+
+    <!-- 1. Symmetry 2025 Abstract + Award -->
+    <publication-card>
+      <div class="pub-image">
+        <!-- image src left blank for now -->
+        <img src="assets/icons/symmetry25.png" alt="Symmetry 2025 Abstract" />
+      </div>
+      <div class="pub-meta">
+        <h3 class="pub-title">
+          Learn From Human Eyes: Zero-Shot Recurring Pattern Detection on a Multi-Perception Benchmark
+        </h3>
+        <p class="pub-authors">
+          Shimian Zhang, <b>Keaton Kraiger</b>, Skanda Bharadwaj, Robert Collins, Yanxi Liu
+        </p>
+        <div class="pub-venue">
+          <a href="https://sciforum.net/event/symmetry2025" target="_blank">Symmetry 2025 Abstract Track</a>
+        </div>
+        <div class="pub-links">
+          <a href="files/pdfs/Symmetry2025_Slides.pdf" target="_blank">PDF</a>
+          <a href="https://sites.psu.edu/eecslpac/explicit-and-implicit-regularity-perception/" target="_blank">Website</a>
+        </div>
+        <div class="pub-award">
+          <strong>Best Oral Presentation Award</strong>
+        </div>
+      </div>
+    </publication-card>
+
+    <!-- 2. NYC Vision Day 2025 -->
+    <publication-card>
+      <div class="pub-image">
+        <img src="assets/icons/NYC_vision_2025.png" alt="NYC Vision Day 2025" />
+      </div>
+      <div class="pub-meta">
+        <h3 class="pub-title">
+          Vision to Dynamics
+        </h3>
+        <p class="pub-authors">
+          <b>Keaton Kraiger</b>, Skanda Bharadwaj, Yanxi Liu, and Robert T. Collins
+        </p>
+        <div class="pub-venue">
+          <a href="https://cs.nyu.edu/~fouhey/NYCVision2025/" target="_blank">NYC Vision Day 2025</a> Poster
+        </div>
+        <div class="pub-links">
+          <a href="files/pdfs/NYU.pdf" target="_blank">PDF</a>
+          <a href="https://sites.psu.edu/eecslpac/vision-to-dynamics/" target="_blank">Website</a>
+        </div>
+      </div>
+    </publication-card>
+
+    <!-- 3. NYC Vision Day 2024 -->
+    <publication-card>
+      <div class="pub-image">
+        <img src="assets/icons/NYC_vision.png" alt="NYC Vision Day 2024" />
+      </div>
+      <div class="pub-meta">
+        <h3 class="pub-title">
+          Vision to Dynamics
+        </h3>
+        <p class="pub-authors">
+          <b>Keaton Kraiger</b> and Yuan Gao
+        </p>
+        <div class="pub-venue">
+          <a href="https://cs.nyu.edu/~fouhey/NYCVision2024/" target="_blank">NYC Vision Day 2024</a> Poster
+        </div>
+        <div class="pub-links">
+          <a href="files/pdfs/NYU.pdf" target="_blank">PDF</a>
+          <a href="https://sites.psu.edu/eecslpac/vision-to-dynamics/" target="_blank">Website</a>
+        </div>
+      </div>
+    </publication-card>
+
+    <!-- 4. Pittsburgh Robotics Network Discovery Day 2023 -->
+    <publication-card>
+      <div class="pub-image">
+        <img src="assets/icons/pitt_robotics.png" alt="Pittsburgh Robotics Discovery Day 2023" />
+      </div>
+      <div class="pub-meta">
+        <h3 class="pub-title">
+          Humanoid Robots (Real and Simulated)
+        </h3>
+        <p class="pub-authors">
+          Jeff Koumba, Yuan Gao, and <b>Keaton Kraiger</b>
+        </p>
+        <div class="pub-venue">
+          <a href="https://robopgh.org/discoveryday/" target="_blank">Pittsburgh Robotics Network Discovery Day 2023</a> Poster
+        </div>
+        <div class="pub-links">
+          <a href="files/pdfs/PITT.pdf" target="_blank">PDF</a>
+          <a href="https://sites.psu.edu/eecslpac/courses/" target="_blank">Website</a>
+        </div>
+      </div>
+    </publication-card>
+
+  </div>
+</div>
 
         <!-- Service work-->
         <div class="row mt-5">
@@ -136,8 +217,8 @@
                 <div id="service">
                     <ul>
                         <li>Outstanding Teaching Assistant Award for Vision and Language Spring 2023</li>
-                        <li>TA Computer Vision, Computer Vision II, Pattern Recognition and Machine Learning</li>
-                        <li>Reviewer for WACV, ECCV, and CVPR</li>
+                        <li>TA Computer Vision, Computer Vision II, Graphics, Machine Learning, and Humanoid Robotics</li>
+                        <li>Multiyear reviewer for WACV, ECCV, and CVPR</li>
                     </ul>
                     
                 </div>
